# MPCWallet

./: .gitignore  AGENTS.md  ARK_PROPOSAL.md  Makefile  PRODUCTION_READINESS.md  README.md  SETTING_UP.md  docker-compose.ark.yml  docker-compose.yml
.github/workflows/: build-eif.yml  cosigner.yml  e2e.yml
ap/: pubspec.yaml
ap/android/app/: build.gradle
ap/lib/: main.dart
ap/lib/screens/: home_screen.dart  receive_screen.dart  splash_screen.dart
ap/lib/services/: mpc_service.dart
ap/lib/theme/: app_theme.dart
ap/lib/usb/: usb_hardware_signer.dart  usb_hid_transport.dart
ap/lib/widgets/: pin_pad.dart  stepper_widget.dart
ap/windows/runner/: Runner.rc
ark/: Cargo.toml  build.rs
ark-ffi/: Cargo.toml
ark-ffi/src/: lib.rs  send.rs
ark/proto/ark/v1/: service.proto  types.proto
ark/src/: lib.rs
ark/src/client/: address.rs  asp_client.rs  batch.rs  mod.rs  send.rs  types.rs
ark/tests/: ark_test.rs
client/: pubspec.yaml
client/.dart_tool/: package_config.json  package_graph.json
client/lib/: ark_wallet.dart  auth_helper.dart  bitcoin.dart  client.dart  coin_selection.dart  fees.dart  grpc_wallet_api.dart  hardware_signer.dart  policy.dart  rest_wallet_api.dart  threshold_types.dart  wallet_api.dart
client/lib/ark/: ark.dart  ark_send.dart
client/lib/persistence/: encryption.dart  wallet_store.dart
client/lib/usb/: hid_chunking.dart
client/test/: bitcoin_full_test.dart  wallet_store_test.dart
cosigner/: Cargo.toml
cosigner/src/: ark_ops.rs  auth_ops.rs  bindings.rs  convert.rs  dkg_ops.rs  key_ops.rs  lib.rs  session_state.rs  signing_ops.rs  util_ops.rs
cosigner/wit/: world.wit
e2e/: docker-compose.yml  get_policy_id_test.dart  policy_test.dart  pubspec.yaml  refresh_flow_test.dart
e2e/.dart_tool/: package_config.json  package_graph.json
e2e/hive_db/: sessions.hive
e2e/lib/: logger.dart  mutinynet_funder.dart  regtest_helper.dart
e2e/signer-server/: Cargo.toml
e2e/signer-server/src/: handler.rs  main.rs  protocol.rs
e2e/test/: ark_e2e_test.dart  full_system_test.dart  hardware_signer_test.dart  multi_user_stress_test.dart  mutinynet_ark_e2e_test.dart  mutinynet_e2e_test.dart  policies_test.dart
embassy-rp-fork/: .cargo_vcs_info.json  Cargo.toml
embassy-rp-fork/src/: clocks.rs  lib.rs
hwsigner/: Cargo.toml  build.rs  hwsigner-combined.uf2  hwsigner-ns.uf2  nsc_import.x  pico-signer.uf2  rp2350.x  rp2350.x.bak
hwsigner-secure/: Cargo.toml  build.rs  device.x  hwsigner-secure.elf  hwsigner-secure.uf2  secure.x  secure_lib.x
hwsigner-secure/.cargo/: config.toml
hwsigner-secure/src/: allocator.rs  handler.rs  main.rs  main.rs.bak  nsc.rs  protocol.rs  rng.rs  storage.rs
hwsigner/.cargo/: config.toml
hwsigner/src/: chunking.rs  main.rs  nsc_client.rs  usb_hid.rs
integration/: pubspec.yaml
integration/test/: policies_test.dart
pico-signer/: Cargo.toml  build.rs  rp2350.x
pico-signer/.cargo/: config.toml
pico-signer/src/: allocator.rs  handler.rs  main.rs  protocol.rs  rng.rs  storage.rs
protocol/: pubspec.yaml
protocol/.dart_tool/: package_config.json  package_graph.json
protocol/lib/: protocol.dart
protocol/protos/: mpc_wallet.proto
protos/: mpc_wallet.proto
scripts/: 99-hwsigner.rules  99-pico-signer.rules  arkd_init.sh  bitcoin.sh  test_hwsigner.py  test_pico.py
server/: Cargo.toml  build.rs  flake.nix  flake_result  pubspec.yaml
server/.dart_tool/: package_config.json  package_graph.json
server/.github/workflows/: build-eif.yml  deploy-enclave.yml  destroy-enclave.yml  verify-enclave.yml
server/enclave/: .gitignore  enclave.yaml  start.sh
server/enclave/gvproxy/: start.sh
server/enclave/scripts/: enclave_init.sh
server/enclave/systemd/: enclave-imds-proxy.service  enclave-mgmt.service  enclave-watchdog.service  gvproxy.service
server/enclave/tofu/: .terraform.lock.hcl  backend.tf  main.tf  migrate-state.sh  outputs.tf  variables.tf
server/enclave/tofu/modules/backend/: main.tf  outputs.tf  variables.tf
server/enclave/tofu/modules/enclave/: ec2.tf  iam.tf  kms.tf  main.tf  outputs.tf  s3.tf  ssm.tf  variables.tf  vpc.tf
server/enclave/tofu/modules/enclave/templates/: user_data.sh.tftpl
server/hive_db/: sessions.hive
server/lib/: auth_verifier.dart  bitcoin.dart  bitcoin_service.dart  config.dart  policy.dart  rate_limiter.dart  server.dart  state.dart  validation.dart
server/lib/persistence/: store.dart
server/lib/services/: electrum_service_impl.dart
server/proto/: mpc_wallet.proto
server/src/: config.rs  crypto_ops.rs  main.rs  rest_api.rs  telemetry.rs  wallet_service.rs  wasm_manager.rs
server/src/auth/: message.rs  mod.rs  verifier.rs
server/src/bitcoin/: electrum.rs  history.rs  mod.rs  rpc.rs  tx_parser.rs
server/src/persistence/: enclave_store.rs  mod.rs  sled_store.rs  store.rs  traits.rs
server/src/policy/: engine.rs  mod.rs  state.rs
server/tests/: isolation_test.rs
server/wit/: world.wit
signer-server/: Cargo.toml
signer-server/src/: handler.rs  protocol.rs
threshold/: Cargo.toml  pubspec.yaml
threshold-ffi/: Cargo.toml
threshold-ffi/.cargo/: config.toml
threshold-ffi/src/: ffi_auth.rs  ffi_dkg.rs  ffi_keys.rs  ffi_signing.rs  ffi_utils.rs  handles.rs  lib.rs
threshold-rs/: Cargo.toml
threshold-rs/src/: binding.rs  commitment.rs  dkg.rs  error.rs  hash.rs  identifier.rs  keys.rs  lib.rs  point.rs  signing.rs  vss.rs
threshold-rs/tests/: frost_test.rs
threshold/benches/: crypto_ops.rs
threshold/example/: dkg_example.dart
threshold/lib/: threshold.dart
threshold/lib/auth/: auth_message.dart  auth_signer.dart
threshold/lib/core/: commitment.dart  dkg.dart  identifier.dart  share.dart  utils.dart
threshold/lib/frost/: commitment.dart  signature.dart  signing.dart  utils.dart
threshold/lib/src/: bindings.dart  (+1 more)
threshold/src/: auth.rs  hash.rs  keys.rs  lagrange.rs  lib.rs  nonce.rs  polynomial.rs  random.rs  scalar.rs  signature.rs  taptree.rs  tweak.rs
threshold/test/: auth_test.dart  dkg_receiver_test.dart  dkg_test.dart  frost_test.dart  refresh_test.dart  vectors_dkg.json
threshold/tests/: frost_test.rs
(+35 files in other folders)
