[package]
name = "ark-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "ark_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
ark = { path = "../ark", features = ["std"] }
ark-core = "0.8"
bitcoin = { version = "0.32", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
