[package]
name = "cosigner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
threshold = { path = "../threshold", features = ["std"] }
ark = { path = "../ark", features = ["std"] }
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
serde_json = "1"
rand = "0.8"
k256 = { version = "0.13", features = ["arithmetic"] }

[package.metadata.component]
package = "component:threshold"

[package.metadata.component.target]
world = "threshold-world"
