[package]
name = "pico-signer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Embassy framework for RP2350
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.9", features = ["defmt", "rp235xa", "time-driver"] }
embassy-time = { version = "0.5", features = ["defmt"] }
embassy-usb = { version = "0.5", features = ["defmt"] }
embassy-futures = "0.1"
embassy-sync = { version = "0.7", features = ["defmt"] }

# Cortex-M support
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

# Threshold crypto (no_std, no default features)
threshold = { path = "../threshold", default-features = false }

# Crypto primitives (match threshold-rs versions)
k256 = { version = "0.13", default-features = false, features = ["arithmetic"] }
rand_core = { version = "0.6", default-features = false }

# Serialization (no_std + alloc)
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

# Allocator
embedded-alloc = "0.7"

# Logging
defmt = "0.3"
defmt-rtt = "0.4"

# Panic handler
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Flash storage
embedded-storage = "0.3"

[profile.release]
opt-level = "s"
lto = true
debug = 2
codegen-units = 1
