[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
wasmtime = { version = "29", features = ["component-model"] }
wasmtime-wasi = "29"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# Persistence
sled = "0.34"

# Bitcoin
bitcoin = { version = "0.32", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }

# Streaming
tokio-stream = "0.1"

# Electrum (raw TCP)
tokio-util = { version = "0.7", features = ["codec"] }

# Crypto
sha2 = "0.10"

# Misc
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
serde_json = "1"

[build-dependencies]
tonic-build = "0.12"
