[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[features]
default = ["sled-backend"]
sled-backend = ["sled"]
enclave-backend = []

[dependencies]
wasmtime = { version = "29", features = ["component-model"] }
wasmtime-wasi = "29"
tonic = "0.12"
tonic-web = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry
opentelemetry = { version = "0.27", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.27", features = ["trace", "metrics", "logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = [
    "http-proto",
    "reqwest-client",
    "trace",
    "metrics",
    "logs",
] }
tracing-opentelemetry = "0.28"
opentelemetry-appender-tracing = "0.27"
opentelemetry-semantic-conventions = "0.27"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# Persistence
sled = { version = "0.34", optional = true }

# Bitcoin
bitcoin = { version = "0.32", features = ["serde"] }

# Ark protocol
ark = { path = "../ark", features = ["client"] }
reqwest = { version = "0.12", features = ["json"] }

# Streaming
tokio-stream = "0.1"

# Electrum (raw TCP)
tokio-util = { version = "0.7", features = ["codec"] }

# Crypto
sha2 = "0.10"

# HTTP/REST
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Misc
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
serde_json = "1"

[build-dependencies]
tonic-build = "0.12"
