[package]
name = "threshold-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "threshold_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
threshold = { path = "../threshold-rs", features = ["std"] }
k256 = { version = "0.13", features = ["arithmetic", "std"] }
serde_json = "1"
rand = "0.8"
sha2 = "0.10"
libc = "0.2"
