[package]
name = "threshold"
version = "0.1.0"
edition = "2021"

[lib]
name = "threshold"

[dependencies]
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "schnorr"] }
sha2 = { version = "0.10", default-features = false }
elliptic-curve = { version = "0.13", default-features = false, features = ["sec1"] }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
hex-conservative = { version = "0.2", default-features = false, features = ["alloc"] }

[features]
default = []
std = ["k256/std", "sha2/std", "serde/std", "serde_json/std", "rand_core/std"]

[dev-dependencies]
rand = "0.8"
