[package]
name = "signer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
threshold = { path = "../../threshold", features = ["std"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
k256 = { version = "0.13", features = ["arithmetic"] }
clap = { version = "4", features = ["derive"] }
